# namazing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  railway.json  results.json  run-pipeline.ts  tsconfig.base.json
.claude/: gemini-addon.md
namazing-py/: README.md  pyproject.toml
namazing-py/data/: baby-names.csv
namazing-py/src/namazing/: __init__.py  __main__.py
namazing-py/src/namazing/cli/: __init__.py  app.py  display.py
namazing-py/src/namazing/data/: korean_names.json
namazing-py/src/namazing/orchestrator/: __init__.py  concurrency.py  llm.py  prompts.py  service.py  stubs.py
namazing-py/src/namazing/prompts/: brief-parser.md  cultural-guard.md  expert-selector.md  name-generator.md  report-composer.md  researcher.md  sanity-checker.md
namazing-py/src/namazing/schemas/: __init__.py  events.py  name_card.py  profile.py  result.py  sanity_check.py  selection.py
namazing-py/src/namazing/tools/: __init__.py  associations.py  cultural.py  phonetics.py  popularity.py  search.py  validators.py
namazing-py/tests/: __init__.py  conftest.py  test_cli.py  test_schemas.py
namazing-py/tests/test_orchestrator/: test_llm.py  test_prompts.py  test_service.py
namazing-py/tests/test_tools/: test_cultural.py  test_phonetics.py  test_popularity.py  test_search.py  test_validators.py
runs/: 0bc9c28d-f4e7-4df1-b01a-c32eff93a170.json  0d5d82c8-cef3-4d3e-aa32-3f4d1fcb1c6d.json  126aa988-1ee3-4474-8c29-75cd7daa47e6.json  21ab39e4-82c6-4c2d-adfd-1e9fa96a22ec.json  2342a224-bd69-4136-b6d2-1d7fb98961a9.json  (+15 more)
(+170 files in other folders)
